Fix bug and wrap user interaction error

--- a/spotipie/src/app/upload-page/upload-page.component.css
+++ b/spotipie/src/app/upload-page/upload-page.component.css
@@ -49,6 +49,12 @@
      color:white;
  }
 
+ button:hover:disabled{
+    pointer-events: none;
+    cursor : not-allowed !important;
+}
+
+
  .colorZipInput {
      color: white;
  }
